# TelcoBSS

./: Makefile  README.adoc  README.md  go.mod  go.sum
.github/: pull_request_template.md
.github/workflows/: ci-cpp.yml  ci-go.yml
cmd/billing-service/: Dockerfile  main.go
cmd/onboarding-service/: Dockerfile  main.go
cmd/order-service/: Dockerfile  main.go
cmd/rating-engine/: CMakeLists.txt  Dockerfile  main.cpp
cpp/: CMakeLists.txt
cpp/include/: placeholder.h
cpp/src/: placeholder.cpp
deployments/docker-compose/: .env.example  docker-compose.yml
deployments/docker-compose/prometheus/: prometheus.yml
deployments/kubernetes/: configmap.yaml  namespace.yaml  secrets.yaml
deployments/kubernetes/deployments/: billing-service.yaml  onboarding-service.yaml  order-service.yaml  rating-engine.yaml
deployments/kubernetes/services/: billing-service.yaml  onboarding-service.yaml  order-service.yaml  rating-engine.yaml
docs/api/proto/: billing.proto  onboarding.proto  order.proto
docs/api/rest/: openapi.yaml
docs/database/: couchbase-setup.md  mysql-setup.md
docs/database/schema/: mysql_init.sql
docs/diagrams/: Overall_Flow_Diagram.adoc  billing-rating.mermaid  deployment-architecture.mermaid  event-driven-architecture.mermaid  onboarding-flow.mermaid  order-management.mermaid  overall-architecture.mermaid
internal/billing/handlers/: handler.go
internal/billing/service/: service.go
internal/common/db/: couchbase.go  mysql.go
internal/common/kafka/: consumer.go  producer.go
scripts/: demo.sh  generate-proto.sh  setup-couchbase.sh  setup-mysql.sh
test/load/: placeholder.md
(+6 files in other folders)
